--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <load ="partials/header.html" />
+    <div id="loader" class="loader" style="display: none"></div>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        id="searchInput"
+        name="query"
+        placeholder="Search images"
+      />
+      <button id="searchButton" type="submit">Search</button>
+    </form>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <div class="gallery" id="gallery"></div>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <button class="btn" type="button" display="none">more</button>
   </body>
+  <script type="module" src="./main.js"></script>
 </html>
